--- a/RestockList/Resources/Base.lproj/Main.storyboard
+++ b/RestockList/Resources/Base.lproj/Main.storyboard
@@ -229,7 +229,7 @@
                                 </constraints>
                                 <color key="textColor" name="FontColor"/>
                                 <fontDescription key="fontDescription" style="UICTFontTextStyleHeadline"/>
-                                <textInputTraits key="textInputTraits"/>
+                                <textInputTraits key="textInputTraits" returnKeyType="done" enablesReturnKeyAutomatically="YES"/>
                             </textField>
                             <pickerView contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="2QX-AS-OcE">
                                 <rect key="frame" x="157" y="141" width="100" height="216"/>
@@ -373,12 +373,13 @@
                             </view>
                             <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="YkB-CK-2Ld">
                                 <rect key="frame" x="30" y="47" width="354" height="50"/>
+                                <color key="tintColor" name="AccentColor1"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="50" id="D6F-QA-j27"/>
                                 </constraints>
                                 <color key="textColor" name="FontColor"/>
                                 <fontDescription key="fontDescription" style="UICTFontTextStyleHeadline"/>
-                                <textInputTraits key="textInputTraits"/>
+                                <textInputTraits key="textInputTraits" returnKeyType="done" enablesReturnKeyAutomatically="YES"/>
                             </textField>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="wCe-ED-qw8"/>
@@ -468,7 +469,7 @@
         <image name="minus" catalog="system" width="128" height="24"/>
         <image name="plus" catalog="system" width="128" height="113"/>
         <namedColor name="AccentColor">
-            <color white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+            <color red="0.082000002264976501" green="0.70999997854232788" blue="0.38400000333786011" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
         <namedColor name="AccentColor1">
             <color red="0.082352941176470587" green="0.70980392156862748" blue="0.3843137254901961" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
